--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
                 Cadastros
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/cliente/new">Clientes</a></li>
+                <li><a class="dropdown-item" href="/clientes/new">Clientes</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -19,7 +19,7 @@
                 Consultas
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/cliente">Clientes</a></li>
+                <li><a class="dropdown-item" href="/clientes">Clientes</a></li>
               </ul>
             </li>
           </ul>
