--- a/views/cliente/new.ejs
+++ b/views/cliente/new.ejs
@@ -5,7 +5,7 @@
 <br/>
   <div class="container">
     <h3 class="mb-4">Cadastro de Clientes</h3>
-    <form method="POST" action="/clientes">
+    <form>
       <div class="row mb-3">
         <div class="col-md-8">
           <label for="nome" class="form-label fw-bold">Nome</label>
