--- a/views/cliente/index.ejs
+++ b/views/cliente/index.ejs
@@ -3,39 +3,47 @@
 <%- include('../partials/navbar.ejs') %>
 
 <br/>
-<div class="container">
-    <h3> Consulta de Clientes</h3>
-    <table class="table table-striped">
-    <thead>
-        <tr>
+<div class="container mt-4">
+  <h3>Consulta de Clientes</h3>
+
+  <table class="table table-striped table-hover mt-3">
+    <thead class="table-dark">
+      <tr>
         <th scope="col">ID</th>
         <th scope="col">Nome</th>
+        <th scope="col">CPF</th>
         <th scope="col">Email</th>
-        <th scope="col">#</th>
-        </tr>
+        <th scope="col">Ações</th>
+      </tr>
     </thead>
     <tbody>
+      <% if (clientes.length === 0) { %>
         <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+          <td colspan="5" class="text-center">Nenhum cliente cadastrado</td>
         </tr>
-        <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-        </tr>
-        <tr>
-        <th scope="row">3</th>
-        <td>John</td>
-        <td>Doe</td>
-        <td>@social</td>
-        </tr>
-    </tbody>
-    </table>
+      <% } else { %>
+        <% clientes.forEach(cliente => { %>
+          <tr>
+            <th scope="row"><%= cliente.id %></th>
+            <td><%= cliente.nome %></td>
+            <td><%= cliente.cpf %></td>
+            <td><%= cliente.email %></td>
+            <td>
+              <a href="/clientes/edit/<%= cliente.id %>" class="btn btn-sm btn-primary">Editar</a>
 
+              <a href="/clientes/delete/<%= cliente.id %>" 
+                class="btn btn-sm btn-danger"
+                onclick="return confirm('Tem certeza que deseja excluir este cliente?')">
+                Excluir
+                </a>
+                
+            </td>
+          </tr>
+        <% }); %>
+      <% } %>
+    </tbody>
+  </table>
 </div>
+
 
 <%- include('../partials/footer.ejs') %>
