--- a/views/cliente/edit.ejs
+++ b/views/cliente/edit.ejs
@@ -26,7 +26,7 @@
 
     <div class="d-flex gap-3">
       <button type="submit" class="btn btn-success">Salvar Alterações</button>
-      <a href="/clientes" class="btn btn-secondary">Cancelar</a>
+      <a href="/clientes" class="btn btn-danger">Cancelar</a>
     </div>
   </form>
 </div>
