--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,6 +12,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/clientes/new">Clientes</a></li>
+                <li><a class="dropdown-item" href="/usuarios/new">Usuários</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -20,6 +21,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/clientes">Clientes</a></li>
+                <li><a class="dropdown-item" href="/usuarios">Usuários</a></li>
               </ul>
             </li>
           </ul>
