--- a/views/usuario/new.ejs
+++ b/views/usuario/new.ejs
@@ -4,29 +4,29 @@
 
 <br/>
   <div class="container">
-    <h3 class="mb-4">Cadastro de Clientes</h3>
-    <form method="POST" action="/clientes">
+    <h3 class="mb-4">Cadastro de Usuários</h3>
+    <form method="POST" action="/usuarios">
       <div class="row mb-3">
-        <div class="col-md-8">
+        <div class="col-12">
           <label for="nome" class="form-label fw-bold">Nome</label>
           <input type="text" id="nome" class="form-control border border-2" name="nome">
-        </div>
-        <div class="col-md-4">
-          <label for="cpf" class="form-label fw-bold">CPF</label>
-          <input type="text" id="cpf" class="form-control border border-2" name="cpf">
         </div>
       </div>
 
       <div class="row mb-4">
-        <div class="col-12">
+        <div class="col-md-8">
           <label for="email" class="form-label fw-bold">Email</label>
-          <input type="email" id="email" class="form-control border border-2" name="email">
+          <input type="email" id="cpf" class="form-control border border-2" name="email">
+        </div>        
+        <div class="col-md-4">
+          <label for="senha" class="form-label fw-bold">senha</label>
+          <input type="password" id="senha" class="form-control border border-2" name="senha">
         </div>
       </div>
 
       <div class="d-flex gap-3">
         <button type="submit" class="btn btn-success">Salvar</button>
-        <a href="/clientes" class="btn btn-danger">Cancelar</a>
+        <a href="/usuarios" class="btn btn-danger">Cancelar</a>
       </div>
     </form>
   </div>
