--- a/views/cliente/index.ejs
+++ b/views/cliente/index.ejs
@@ -5,7 +5,7 @@
 <div class="container mt-4">
   <h3>Consulta de Clientes</h3>
 
-  <table class="table table-striped table-hover mt-3">
+  <table id="dadosTable" class="table table-striped table-hover mt-3">
     <thead class="table-dark">
       <tr>
         <th scope="col">ID</th>
@@ -79,6 +79,20 @@ document.addEventListener('DOMContentLoaded', function(){
     });
   });
 });
+</script>
+
+<script>
+  $(document).ready(function() {
+    $('#dadosTable').DataTable({
+      pageLength: 10,
+      lengthMenu: [5, 10, 25, 50, 100],
+      ordering: true,
+      searching: true,
+      language: {
+          url: "/json/pt-BR.json"
+        }
+    });
+  });
 </script>
 
 <%- include('../partials/footer.ejs') %>
